--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -58,6 +58,18 @@
     }
   }
 
+  &--inverse-thin {
+    color: $black !important;
+    font-weight: normal !important;
+    border: 1px solid $black !important; /* override*/
+    background-color: #fff;
+
+    &:hover {
+      color: #fff !important;
+      border-color: $black;
+    }
+  }
+
   /* light outline */
 
   &--light-outline {
