--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -59,14 +59,14 @@
   }
 
   &--inverse-thin {
-    color: $black !important;
+    color: mix(white, #000, 20%) !important;
     font-weight: normal !important;
-    border: 1px solid $black !important; /* override*/
+    border: 1px solid mix(white, #000, 20%) !important; /* override*/
     background-color: #fff;
 
     &:hover {
       color: #fff !important;
-      border-color: $black;
+      border-color: mix(white, #000, 20%);
     }
   }
 
