--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -59,6 +59,8 @@
   }
 
   &--inverse-thin {
+    margin-bottom: 0.15em;
+    padding: 0.4em 1em;
     color: mix(white, #000, 20%) !important;
     font-size: 100% !important;
     font-weight: normal !important;
