--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -59,9 +59,9 @@
   }
 
   &--inverse-thin {
-    margin-bottom: 0.15em;
-    padding: 0.4em 1em;
-    color: mix(white, #000, 20%) !important;
+    margin-bottom: 0.15em !important;
+    padding: 0.2em 0.5em !important;
+    color: mix(white, #000, 90%) !important;
     font-size: 100% !important;
     font-weight: normal !important;
     border: 1px solid mix(white, #000, 20%) !important; /* override*/
