--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -58,6 +58,20 @@
     }
   }
 
+  &--inverse-thin {
+    margin-bottom: 0.15em !important;
+    padding: 0.3em 0.6em !important;
+    color: mix(white, #000, 20%) !important;
+    font-weight: normal !important;
+    border: 1px solid mix(white, #000, 20%) !important; /* override*/
+    background-color: #fff;
+
+    &:hover {
+      color: #fff !important;
+      border-color: mix(white, #000, 20%);
+    }
+  }
+
   /* light outline */
 
   &--light-outline {
